Closed
Bug 131820
Opened 24 years ago
Closed 24 years ago
Hitting return in an inline style doesn't advance caret to next line
Categories
(Core :: DOM: Editor, defect, P2)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: kinmoz, Assigned: kinmoz)
Details
(Whiteboard: EDITORBASE)
Attachments
(1 file)
|
1.23 KB,
patch
|
mozeditor
:
review+
sfraser_bugs
:
superreview+
scc
:
approval+
|
Details | Diff | Splinter Review |
I noticed this bug while trying to fix bug 102615 ...
To reproduce:
1. Startup a new composer window.
2. Type a letter.
3. Hit backspace.
4. Hit the bold button on the toolbar.
5. Type a letter.
6. Hit return.
Notice how the caret fails to go to the next line?
If you follow the steps above, but leave out steps 2 and 3, things work fine.
The problem is that whenever we delete enough content to make the body empty,
nsHTMLEditRules::AdjustSelection() adds a mozBR before AfterEditInner() can call
CreateBogusNodeIfNeeded() ... why does it matter what type of BR we add? Because
IsVisBreak() as well as other editor methods call IsEditable() which checks
specifically for br bogus nodes which are considered not-editable.
Status: NEW → ASSIGNED
Keywords: nsbeta1
Priority: -- → P3
Whiteboard: EDITORBASE, FIX IN HAND need r= and sr=
Target Milestone: --- → mozilla1.0
Updated•24 years ago
|
Attachment #74802 -
Flags: review+
Comment 2•24 years ago
|
||
Comment on attachment 74802 [details] [diff] [review]
Patch Rev 1 (Prevent AdjustSelection() from adding a MozBR when body is empty)
r=jfrancis
Whiteboard: EDITORBASE, FIX IN HAND need r= and sr= → EDITORBASE, FIX IN HAND need sr=
Comment 3•24 years ago
|
||
nsbeta1+
Comment 4•24 years ago
|
||
Comment on attachment 74802 [details] [diff] [review]
Patch Rev 1 (Prevent AdjustSelection() from adding a MozBR when body is empty)
sr=sfraser
Attachment #74802 -
Flags: superreview+
Whiteboard: EDITORBASE, FIX IN HAND need sr= → EDITORBASE, FIX IN HAND need a=
Comment 5•24 years ago
|
||
Comment on attachment 74802 [details] [diff] [review]
Patch Rev 1 (Prevent AdjustSelection() from adding a MozBR when body is empty)
a=scc
Attachment #74802 -
Flags: approval+
Fix checked in on TRUNK:
mozilla/editor/libeditor/html/nsHTMLEditRules.cpp revision 1.236
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: EDITORBASE, FIX IN HAND need a= → EDITORBASE
You need to log in
before you can comment on or make changes to this bug.
Description
•