Fix for bug 131820: Hitting return in an inline style doesn't advance                     caret to next line

Prevent AdjustSelection() from adding a MozBR when
the root node is empty so that EditAfterInner()
can add the BogusBR node.

r=jfrancis@netscape.com  sr=sfraser@netscape.com  a=scc@mozilla.org