editor/libeditor/html/nsHTMLEditRules.cpp
@@ -6747,6 +6747,19 @@ nsHTMLEditRules::AdjustSelection(nsISelection *aSelection, nsIEditor::EDirection
   // check if br can go into the destination node
   if (bIsEmptyNode && mHTMLEditor->CanContainTag(selNode, NS_LITERAL_STRING("br")))
   {
+    nsCOMPtr<nsIDOMElement> rootElement;
+    res = mHTMLEditor->GetRootElement(getter_AddRefs(rootElement));
+    if (NS_FAILED(res)) return res;
+    if (!rootElement) return NS_ERROR_FAILURE;
+    nsCOMPtr<nsIDOMNode> rootNode(do_QueryInterface(rootElement));
+    if (selNode == rootNode)
+    {
+      // Our root node is completely empty. Don't add a <br> here.
+      // AfterEditInner() will add one for us when it calls
+      // CreateBogusNodeIfNeeded()!
+      return NS_OK;
+    }
+
     nsCOMPtr<nsIDOMNode> brNode;
     // we know we can skip the rest of this routine given the cirumstance
     return CreateMozBR(selNode, selOffset, address_of(brNode));
